[project]
name = "langraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.10",
    "langsmith>=0.4.2",
    "mcp>=1.10.1",
    "python-dotenv>=1.1.1",
]
